cmake_minimum_required(VERSION 3.16)
project(C_Basic_Code C)

set(CMAKE_C_STANDARD 11)

add_executable(C_Basic_Code main.c)







add_executable(Example_16_7 C_Primer_Plus/Unit_16/Example_16_7.c)
add_executable(Example_16_8 C_Primer_Plus/Unit_16/Example_16_8.c)
add_executable(Example_16_9 C_Primer_Plus/Unit_16/Example_16_9.c)
add_executable(Example_16_11 C_Primer_Plus/Unit_16/Example_16_11.c)
add_executable(Example_16_12 C_Primer_Plus/Unit_16/Example_16_12.c)
add_executable(Example_16_13 C_Primer_Plus/Unit_16/Example_16_13.c)
add_executable(Example_16_14 C_Primer_Plus/Unit_16/Example_16_14.c)
add_executable(Example_16_15 C_Primer_Plus/Unit_16/Example_16_15.c)
add_executable(Example_16_16 C_Primer_Plus/Unit_16/Example_16_16.c)
add_executable(Example_16_17 C_Primer_Plus/Unit_16/Example_16_17.c)
add_executable(Example_16_18 C_Primer_Plus/Unit_16/Example_16_18.c)
add_executable(Example_16_19 C_Primer_Plus/Unit_16/Example_16_19.c)
add_executable(Example_16_20 C_Primer_Plus/Unit_16/Example_16_20.c)
add_executable(Example_16_21 C_Primer_Plus/Unit_16/Example_16_21.c)